--- a/index.html
+++ b/index.html
@@ -20,49 +20,47 @@
     <nav class="teal accent-4">
       <div class="container">
         <div class="nav-wrapper">
-          <a href="#" class="brand-logo"><img width="63" src="img/logo.png"></a>
+          <a href="/" class="brand-logo"><img width="63" src="img/logo.png"></a>
           <a href="#" data-target="mobile-nav" class="sidenav-trigger">
             <i class="material-icons">menu</i>
           </a>
           <ul class="right hide-on-med-and-down">
             <li>
-              <a href="#home">Home</a>
+              <a href="/">Home</a>
             </li>
             <li>
-              <a href="#search">About Us</a>
+            <a class='dropdown-trigger' id="dpAboutUs" data-target='dataAboutUs'>About Us</a>
             </li>
             <li>
-              <a href="#popular">Services</a>
+              <a class='dropdown-trigger' id="dpServices" data-target='dataServices'>Services</a>
             </li>
             <li>
-              <a href="#gallery">Network</a>
+              <a href="/map.html">Branches</a>
             </li>
             <li>
-              <a href="#contact">Contact</a>
-            </li>
-            <li>
-              <a href="#contact">News</a>
+              <a href="#contact">Contact Us</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
   </div>
+
   <ul class="sidenav" id="mobile-nav">
     <li>
-      <a href="#home">Home</a>
+      <a href="/">Home</a>
     </li>
     <li>
-      <a href="#search">Search</a>
+      <a href="#search">About Us</a>
     </li>
     <li>
-      <a href="#popular">Features</a>
+      <a href="#popular">Services</a>
     </li>
     <li>
-      <a href="#gallery">Gallery</a>
+      <a href="/map.html">Branches</a>
     </li>
     <li>
-      <a href="#contact">Contact</a>
+      <a href="#contact">Contact Us</a>
     </li>
   </ul>
 
@@ -183,7 +181,7 @@
   </section>
 
   <!-- Section: Follow -->
-  <section class="section section-follow teal darken-2 white-text center">
+  <section class="section section-follow teal accent-4 white-text center">
     <div class="container">
       <div class="row">
         <div class="col s12">
@@ -310,44 +308,26 @@
     <p class="flow-text">ISCB &copy; 2020 </p>
   </footer>
 
+
+  <!-- Dropdown Structure -->
+  <ul id='dataAboutUs' class='dropdown-content'>
+    <li><a href="#!">History</a></li>
+    <li><a href="#!">Vision and Mission</a></li>
+    <li><a href="#!">Leaderships and Staffs</a></li>
+    <li><a href="#!">Annual Report 2018</a></li>
+    <li><a href="#!">Annual Report 2019</a></li>
+  </ul>
+
+  <ul id='dataServices' class='dropdown-content'>
+    <li><a href="#!">Deposits</a></li>
+    <li><a href="#!">Loans</a></li>
+  </ul>
+
   <!--JavaScript at end of body for optimized loading-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="main.js"></script>
 
-  <script>
-    // Sidenav
-    const sideNav = document.querySelector('.sidenav');
-    M.Sidenav.init(sideNav, {});
-
-    // Slider
-    const slider = document.querySelector('.slider');
-    M.Slider.init(slider, {
-      indicators: false,
-      height: 500,
-      transition: 500,
-      interval: 6000
-    });
-
-    // Autocomplete
-    const ac = document.querySelector('.autocomplete');
-    M.Autocomplete.init(ac, {
-      data: {
-        "Personal Loan": null,
-        "Agri Loan": null,
-        "Multipurpose Loan": null,
-        "Benefits": null,
-        "Emergency Loan": null,
-      }
-    });
-
-    // Material Boxed
-    const mb = document.querySelectorAll('.materialboxed');
-    M.Materialbox.init(mb, {});
-
-    // ScrollSpy
-    const ss = document.querySelectorAll('.scrollspy');
-    M.ScrollSpy.init(ss, {});
-
-  </script>
 </body>
 
 </html>
