--- a/map.html
+++ b/map.html
@@ -26,7 +26,7 @@
           </a>
           <ul class="right hide-on-med-and-down">
             <li>
-              <a href="/">Home</a>
+              <a href="index.html">Home</a>
             </li>
             <li>
             <a class='dropdown-trigger' id="dpAboutUs" data-target='dataAboutUs'>About Us</a>
@@ -35,7 +35,7 @@
               <a class='dropdown-trigger' id="dpServices" data-target='dataServices'>Services</a>
             </li>
             <li>
-              <a href="/map.html">Branches</a>
+              <a href="map.html">Branches</a>
             </li>
             <li>
               <a href="#contact">Contact Us</a>
@@ -48,7 +48,7 @@
 
   <ul class="sidenav" id="mobile-nav">
     <li>
-      <a href="/">Home</a>
+      <a href="index.html">Home</a>
     </li>
     <li>
       <a href="#search">About Us</a>
@@ -57,7 +57,7 @@
       <a href="#popular">Services</a>
     </li>
     <li>
-      <a href="/map.html">Branches</a>
+      <a href="map.html">Branches</a>
     </li>
     <li>
       <a href="#contact">Contact Us</a>
