--- a/visionmission.html
+++ b/visionmission.html
@@ -67,12 +67,41 @@
   <section id="popular" class="section section-popular scrollspy">
     <div class="container">
       <div class="row">
-        <h4 class="center">
-          <span class="teal-text">Branches</span></h4>
-       <div>
-        <iframe src="https://www.google.com/maps/d/u/1/embed?mid=1Cibfha2hg7H1RopDxgAWaAzRBjcQ2uDe" width="900" height="550"></iframe>
-       </div>
+        <div class="col s12 teal-text center">
+            <h4>Vision</h4>
+            <p>An empowered and sustainable cooperative bank in Luzon.</p>
+          </div>
+    </div>
+    </div>
+  </section>
+
+  <section class="section section-follow teal accent-4 white-text center">
+    <div class="container">
+      <div class="row">
+        <div class="col s12">
+          <h4>Mission</h4>
+          <p>1.	To provide financial products and services and help in the countryside development.</p>
+            <p>2.	To develop partnership with stakeholders for economic endeavors.</p>
+            <p>3.	To provide career development for employees and officers of the bank.</p>
+            <p>4.	To undertake community Efforts consistent with our Vision statement.</p>
+        </div>
       </div>
+    </div>
+  </section>
+
+  
+  <section id="popular" class="section section-popular scrollspy">
+    <div class="container">
+      <div class="row">
+        <div class="col s12 teal-text center">
+            <h4>Core Values</h4>
+            <p> <span><strong>I - INTEGRITY</strong></span> (upholds honesty & fairness)</p>
+        	<p><span><strong>C - COMPETETIVE</strong></span> (better than others)</p>
+	        <p><span><strong>C - COMPLIANT</strong></span> (law abiding Coop Bank/ Institution)</p>
+	        <p><span><strong>B – BEST</strong></span> IN LUZON (Top performing Coop Bank)</p>
+
+          </div>
+    </div>
     </div>
   </section>
 
@@ -92,7 +121,7 @@
   </ul>
 
   <!-- Footer -->
-  <footer class="section teal darken-2 white-text center">
+  <footer class="section teal accent-4 white-text center">
     <div>Footer Area</div>
     <p class="flow-text">ISCB &copy; 2020 </p>
   </footer>
@@ -105,3 +134,6 @@
 </body>
 
 </html>
+
+
+
