--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <a href="map.html">Branches</a>
             </li>
             <li>
-              <a href="#contact">Contact Us</a>
+              <a href="contact.html">Contact Us</a>
             </li>
           </ul>
         </div>
@@ -60,7 +60,7 @@
       <a href="map.html">Branches</a>
     </li>
     <li>
-      <a href="#contact">Contact Us</a>
+      <a href="contact.html">Contact Us</a>
     </li>
   </ul>
 
@@ -68,7 +68,7 @@
   <section class="slider">
     <ul class="slides">
       <li>
-        <img src="img/resort1.jpg">
+        <img src="img/front1.jpg">
         <!-- random image -->
         <div class="caption center-align">
           <h2>Get your desired loans</h2>
@@ -76,7 +76,7 @@
         </div>
       </li>
       <li>
-        <img src="img/resort2.jpg">
+        <img src="img/front2.jpg">
         <!-- random image -->
         <div class="caption left-align">
           <h2>We Work With All Budgets</h2>
@@ -84,7 +84,7 @@
         </div>
       </li>
       <li>
-        <img src="img/resort3.jpg">
+        <img src="img/resort1.jpg">
         <!-- random image -->
         <div class="caption right-align">
           <h2>Financial Needs</h2>
@@ -311,8 +311,8 @@
 
   <!-- Dropdown Structure -->
   <ul id='dataAboutUs' class='dropdown-content'>
-    <li><a href="#!">History</a></li>
-    <li><a href="#!">Vision and Mission</a></li>
+    <li><a href="history.html">History</a></li>
+    <li><a href="visionmission.html">Vision and Mission</a></li>
     <li><a href="#!">Leaderships and Staffs</a></li>
     <li><a href="#!">Annual Report 2018</a></li>
     <li><a href="#!">Annual Report 2019</a></li>
