--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body id="home" class="scrollspy">
   <!-- Navbar -->
   <div class="navbar-fixed">
-    <nav class="teal accent-4">
+    <nav class="green darken-2">
       <div class="container">
         <div class="nav-wrapper">
           <a href="/" class="brand-logo"><img width="63" src="img/logo.png"></a>
@@ -50,9 +50,15 @@
     <li>
       <a href="index.html">Home</a>
     </li>
-    <li>
-      <a href="#search">About Us</a>
-    </li>
+    <li class="subheader">About Us</li>
+    
+        <li><a href="history.html">History</a></li>
+        <li>Vision and Mission</li>
+        <li>Leaderships and Staffs</li>
+        <li>Annual Report 2018</li>
+        <li>Annual Report 2019</li>
+     
+   
     <li>
       <a href="#popular">Services</a>
     </li>
@@ -142,7 +148,7 @@
     <div class="container">
       <div class="row">
         <h4 class="center">
-          <span class="teal-text">Features</span></h4>
+          <span class="green-text">Features</span></h4>
         <div class="col s12 m4">
           <div class="card">
             <div class="card-image">
@@ -181,7 +187,7 @@
   </section>
 
   <!-- Section: Follow -->
-  <section class="section section-follow teal accent-4 white-text center">
+  <section class="section section-follow green darken-2 white-text center">
     <div class="container">
       <div class="row">
         <div class="col s12">
@@ -211,7 +217,7 @@
   <section id="gallery" class="section section-gallery scrollspy">
     <div class="container">
       <h4 class="center">
-        <span class="teal-text">Photo</span> Gallery
+        <span class="green-text">Photo</span> Gallery
       </h4>
       <div class="row">
         <div class="col s12 m3">
@@ -265,7 +271,7 @@
     <div class="container">
       <div class="row">
         <div class="col s12 m6">
-          <div class="card-panel teal white-text center">
+          <div class="card-panel green white-text center">
             <i class="material-icons">email</i>
             <h5>Reach Us</h5>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo praesentium fugit tempore hic enim possimus molestias
@@ -303,7 +309,7 @@
   </section>
 
   <!-- Footer -->
-  <footer class="section teal darken-2 white-text center">
+  <footer class="section green darken-2 white-text center">
     <div>Footer Area</div>
     <p class="flow-text">ISCB &copy; 2020 </p>
   </footer>
