--- a/visionmission.html
+++ b/visionmission.html
@@ -17,7 +17,7 @@
 <body id="home" class="scrollspy">
   <!-- Navbar -->
   <div class="navbar-fixed">
-    <nav class="teal accent-4">
+    <nav class="green darken-2">
       <div class="container">
         <div class="nav-wrapper">
           <a href="/" class="brand-logo"><img width="63" src="img/logo.png"></a>
