--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <li class="subheader">About Us</li>
     
         <li><a href="history.html">History</a></li>
-        <li>Vision and Mission</li>
+        <li><a href="visionmission.html"></a>Vision and Mission</a></li>
         <li>Leaderships and Staffs</li>
         <li>Annual Report 2018</li>
         <li>Annual Report 2019</li>
