vision mission color

--- a/visionmission.html
+++ b/visionmission.html
@@ -67,7 +67,7 @@
   <section id="popular" class="section section-popular scrollspy">
     <div class="container">
       <div class="row">
-        <div class="col s12 teal-text center">
+        <div class="col s12 green-text center">
             <h4>Vision</h4>
             <p>An empowered and sustainable cooperative bank in Luzon.</p>
           </div>
@@ -75,7 +75,7 @@
     </div>
   </section>
 
-  <section class="section section-follow teal accent-4 white-text center">
+  <section class="section section-follow green darken-2 white-text center">
     <div class="container">
       <div class="row">
         <div class="col s12">
@@ -93,7 +93,7 @@
   <section id="popular" class="section section-popular scrollspy">
     <div class="container">
       <div class="row">
-        <div class="col s12 teal-text center">
+        <div class="col s12 green-text center">
             <h4>Core Values</h4>
             <p> <span><strong>I - INTEGRITY</strong></span> (upholds honesty & fairness)</p>
         	<p><span><strong>C - COMPETETIVE</strong></span> (better than others)</p>
@@ -121,7 +121,7 @@
   </ul>
 
   <!-- Footer -->
-  <footer class="section teal accent-4 white-text center">
+  <footer class="section green darken-2 white-text center">
     <div>Footer Area</div>
     <p class="flow-text">ISCB &copy; 2020 </p>
   </footer>
