--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ilocos Sur Cooperative Bank</title>
+
 </head>
 
 <body id="home" class="scrollspy">
   <!-- Navbar -->
+
   <div class="navbar-fixed">
     <nav class="green darken-2">
       <div class="container">
         <div class="nav-wrapper">
-          <a href="/" class="brand-logo"><img width="63" src="img/logo.png"></a>
+          <a href="index.html" class="brand-logo"><img width="100" src="img/logo.png"></a>
           <a href="#" data-target="mobile-nav" class="sidenav-trigger">
             <i class="material-icons">menu</i>
           </a>
@@ -46,28 +48,23 @@
     </nav>
   </div>
 
+
+
   <ul class="sidenav" id="mobile-nav">
-    <li>
-      <a href="index.html">Home</a>
-    </li>
-    <li class="subheader">About Us</li>
-    
-        <li><a href="history.html">History</a></li>
-        <li><a href="visionmission.html">Vision and Mission</a></li>
-        <li>Leaderships and Staffs</li>
-        <li>Annual Report 2018</li>
-        <li>Annual Report 2019</li>
-     
-   
-    <li>
-      <a href="#popular">Services</a>
-    </li>
-    <li>
-      <a href="map.html">Branches</a>
-    </li>
-    <li>
-      <a href="contact.html">Contact Us</a>
-    </li>
+    <li><a href="index.html">Home</a></li>    
+    <li class="subheader divider tabindex=-1"></li>  
+    <li><a href="history.html">History</a></li>
+    <li><a href="visionmission.html">Vision and Mission</a></li>
+    <li><a href="#!">Leaderships and Staffs</a></li>
+    <li><a href="#!">Annual Report 2018</a></li>
+    <li><a href="#!">Annual Report 2019</a></li>
+    <li class="subheader divider tabindex=-1"></li>
+    <li><a href="#!">Deposits</a></li>
+    <li><a href="#!">Loans</a></li>
+    <li class="subheader divider tabindex=-1"></li>
+    <li><a href="map.html">Branches</a></li>
+    <li class="subheader divider tabindex=-1"></li>
+    <li><a href="contact.html">Contact Us</a></li>
   </ul>
 
   <!-- Section: Slider -->
