--- a/map.html
+++ b/map.html
@@ -33,10 +33,10 @@
 <body id="home" class="scrollspy">
   <!-- Navbar -->
   <div class="navbar-fixed">
-    <nav class="teal accent-4">
+    <nav class="green darken-2">
       <div class="container">
         <div class="nav-wrapper">
-          <a href="/" class="brand-logo"><img width="63" src="img/logo.png"></a>
+          <a href="index.html" class="brand-logo"><img width="100" src="img/logo.png"></a>
           <a href="#" data-target="mobile-nav" class="sidenav-trigger">
             <i class="material-icons">menu</i>
           </a>
@@ -62,22 +62,23 @@
     </nav>
   </div>
 
+
+
   <ul class="sidenav" id="mobile-nav">
-    <li>
-      <a href="index.html">Home</a>
-    </li>
-    <li>
-      <a href="#search">About Us</a>
-    </li>
-    <li>
-      <a href="#popular">Services</a>
-    </li>
-    <li>
-      <a href="map.html">Branches</a>
-    </li>
-    <li>
-      <a href="contact.html">Contact Us</a>
-    </li>
+    <li><a href="index.html">Home</a></li>    
+    <li class="subheader divider tabindex=-1"></li>  
+    <li><a href="history.html">History</a></li>
+    <li><a href="visionmission.html">Vision and Mission</a></li>
+    <li><a href="#!">Leaderships and Staffs</a></li>
+    <li><a href="#!">Annual Report 2018</a></li>
+    <li><a href="#!">Annual Report 2019</a></li>
+    <li class="subheader divider tabindex=-1"></li>
+    <li><a href="#!">Deposits</a></li>
+    <li><a href="#!">Loans</a></li>
+    <li class="subheader divider tabindex=-1"></li>
+    <li><a href="map.html">Branches</a></li>
+    <li class="subheader divider tabindex=-1"></li>
+    <li><a href="contact.html">Contact Us</a></li>
   </ul>
 
   <section id="popular" class="section section-popular scrollspy">
@@ -107,7 +108,7 @@
   </ul>
 
   <!-- Footer -->
-  <footer class="section teal darken-2 white-text center">
+  <footer class="section green darken-2 white-text center">
     <div>Footer Area</div>
     <p class="flow-text">ISCB &copy; 2020 </p>
   </footer>
